--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,23 @@
 
+requests
 
-
-requests 
+pandas
 
 plotly
+
+
+python-dotenv
+
+# for web app:
+flask # <--- ADD FOR WEB APP
+#gunicorn
+
+
+# for testing:
+pytest
+
+
+# for web app:
+flask
+#gunicorn
+gunicorn
