--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
 # the ".env" file (in the root directory of the repo)
 
-app_id = "1c151feb"
-app_key = "36787056f538f7a336fcb7b8c67f39c7"
+APP_ID="1c151feb"
+APP_KEY="36787056f538f7a336fcb7b8c67f39c7"
